@startuml classes
class Room {
    id : Long
    uuid: String
    company : String
    availableFrom : Date
    availableTo : Date
    location : String
    capacity : Integer
}

class Flight {
    id : Long
    uuid: String
    company : String
    flyingFrom : String
    flyingTo : String
    departureTime : DateTime
    capacity : Integer
}

class RoomFlightOffer {
    id : Long
    flightId : Long
    flightCompany: Long
    roomId : Long
    createDate: Date
}

RoomFlightOffer -- Room
RoomFlightOffer -- Flight
@enduml